# AI-Developer-Technical-Assessment

./: .env  README.md  docker-compose.yml  init_structure.sh
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/api/endpoints/: books.py  hackernews.py  init.py
backend/app/models/: book.py
backend/app/scrappers/: scrape_books.py  scrape_hn.py
backend/app/services/: redis_client.py
backend/app/tests/: test_books.py
frontend/: Dockerfile  entrypoint.sh
frontend/app/: .gitignore  Makefile  README.md  package-lock.json  package.json  pubspec.yaml  theme.json
frontend/app/client/: index.html
frontend/app/client/src/: App.tsx  index.css
frontend/app/client/src/components/: AudioMessage.tsx  ChatHeader.tsx  ChatInputArea.tsx  ChatMessages.tsx  TypingIndicator.tsx
frontend/app/client/src/hooks/: useAudioRecorder.ts
frontend/app/client/src/lib/: n8nApi.ts  types.ts
frontend/app/client/src/pages/: ChatPage.tsx
frontend/app/lib/: main_development.dart  main_staging.dart
frontend/app/lib/app/: custom_theme.dart
frontend/app/lib/app/view/: app.dart
frontend/app/lib/chatbot/: chatbot_page.dart
frontend/app/lib/services/: chatbot_service.dart
frontend/app/server/: routes.ts
frontend/app/shared/: schema.ts
frontend/app/web/: index.html  manifest.json
frontend/nginx/: default.conf
frontend/src/: App.js
workflows/: Dockerfile  entrypoint.sh  main_workflow.json  n8n_credentials.json  n8n_workflow.json  speech-to-text-with-assembly.json
