[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend with Redis and Selenium"
authors = ["Marcos"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
redis = "^5.0.0"
selenium = "^4.18.0"
python-dotenv = "^1.0.1"
pydantic = "^2.5.0"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.2"
